--- a/pages/diabetes/patient/info.wxml
+++ b/pages/diabetes/patient/info.wxml
@@ -13,14 +13,6 @@
     <view class="action">{{info.age}}</view>
   </view>
   <view class="cu-item">
-    <view class="content">身高</view>
-    <view class="action">{{info.height}}<text class="text-gray text-xs padding-top-xs margin-left-xs">CM</text></view>
-  </view>
-  <view class="cu-item">
-    <view class="content">体重</view>
-    <view class="action">{{info.weight}}<text class="text-gray text-xs padding-top-xs margin-left-xs">KG</text></view>
-  </view>
-  <view class="cu-item">
     <view class="content">性别</view>
     <view class="action">{{info.gender}}</view>
   </view>
@@ -28,13 +20,30 @@
     <view class="content">ID</view>
     <view class="action">{{info.hospitalId}}</view>
   </view>
-  <view class="cu-item">
-    <view class="content">入院时间</view>
-    <view class="action">{{info.admissionDate}}</view>
+  <block wx:if="{{info.admissionDate}}">
+    <view class="cu-item">
+      <view class="content">入院时间</view>
+      <view class="action">{{info.admissionDate}}</view>
+    </view>
+    <view class="cu-item">
+      <view class="content">出院时间</view>
+      <view class="action">{{info.dischargeDate}}</view>
+    </view>
+  </block>
+  <block wx:if="{{info.treatmentDate}}">
+    <view class="cu-item">
+      <view class="content">就诊时间</view>
+      <view class="action">{{info.treatmentDate}}</view>
+    </view>
+  </block>
+
+  <view class="cu-item" wx:if="{{info.scanData.bp}}">
+    <view class="content">血压</view>
+    <view class="action">{{info.scanData.bp}}</view>
   </view>
-  <view class="cu-item">
-    <view class="content">出院时间</view>
-    <view class="action">{{info.dischargeDate}}</view>
+  <view class="cu-item" wx:if="{{info.scanData.bmi}}">
+    <view class="content">BMI</view>
+    <view class="action">{{info.scanData.bmi}}</view>
   </view>
 </view>
 <view class="cu-bar bg-gray">
@@ -42,137 +51,208 @@
     <text class="cuIcon-title text-blue"></text>入院诊断
   </view>
 </view>
-<view class="cu-form-group flex-wrap">
-  <view class="cu-tag margin-tb-xs text-main bg-white" wx:for="{{info.scanData['admissionDiagnosis']}}" wx:key="index">{{item}}</view>
-</view>
-<view class="cu-bar bg-gray">
-  <view class="action">
-    <text class="cuIcon-title text-blue"></text>出院诊断
+<view class="bg-white padding">
+  <text class="line2 {{allline['admissionDiagnosis']?'line-all':''}}">
+    <text wx:if="{{info.type==0}}">{{info.scanData['admissionDiagnosis']}}</text>
+    <text wx:for="{{info.scanData['admissionDiagnosis']}}" wx:key="index" wx:if="{{info.type==1}}">
+      {{item}}
+    </text>
+
+  </text>
+  <view class="flex align-center" bindtap="showAll" data-type="admissionDiagnosis">
+    <view class="flex-sub dashed-bottom"></view>
+    <view class="margin-lr text-blue">{{allline['admissionDiagnosis']?'收起':'展开'}}<text class="text-blue {{allline['admissionDiagnosis']?'cuIcon-triangleupfill':'cuIcon-triangledownfill'}}"></text></view>
+    <view class="flex-sub dashed-bottom"></view>
   </view>
 </view>
-<view class="cu-form-group flex-wrap">
-  <view class="cu-tag margin-tb-xs text-main bg-white" wx:for="{{info.scanData['dischargeDiagnosis']}}" wx:key="index">{{item}}</view>
-</view>
+<block wx:if="{{info.scanData['dischargeDiagnosis']}}">
+  <view class="cu-bar bg-gray">
+    <view class="action">
+      <text class="cuIcon-title text-blue"></text>出院诊断
+    </view>
+  </view>
+
+  <view class="bg-white padding">
+    <text class="line2 {{allline['dischargeDiagnosis']?'line-all':''}}">
+      <text wx:for="{{info.scanData['dischargeDiagnosis']}}" wx:key="index">
+        {{item}}
+      </text>
+    </text>
+    <view class="flex align-center" bindtap="showAll" data-type="dischargeDiagnosis">
+      <view class="flex-sub dashed-bottom"></view>
+      <view class="margin-lr text-blue">{{allline['dischargeDiagnosis']?'收起':'展开'}}<text class="text-blue {{allline['dischargeDiagnosis']?'cuIcon-triangleupfill':'cuIcon-triangledownfill'}}"></text></view>
+      <view class="flex-sub dashed-bottom"></view>
+    </view>
+  </view>
+</block>
+
+
 <view class="cu-bar bg-gray">
   <view class="action">
     <text class="cuIcon-title text-blue"></text>入院情况
   </view>
 </view>
-<view class="cu-form-group">
-  <view class="padding-tb">{{info.scanData['admissionInfo']}}</view>
+<view class="bg-white padding">
+  <text class="line2 {{allline['admissionInfo']?'line-all':''}}">{{info.scanData['admissionInfo']}}</text>
+  <view class="flex align-center" bindtap="showAll" data-type="admissionInfo">
+    <view class="flex-sub dashed-bottom"></view>
+    <view class="margin-lr text-blue">{{allline['admissionInfo']?'收起':'展开'}}<text class="text-blue {{allline['admissionInfo']?'cuIcon-triangleupfill':'cuIcon-triangledownfill'}}"></text></view>
+    <view class="flex-sub dashed-bottom"></view>
+  </view>
 </view>
-
 <view class="cu-bar bg-gray">
   <view class="action">
     <text class="cuIcon-title text-blue"></text>既往史
   </view>
 </view>
-<view class="cu-form-group">
-  <view class="padding-tb">{{info.scanData['anamnesis']}}</view>
+
+<view class="bg-white padding">
+  <text class="line2 {{allline['anamnesis']?'line-all':''}}">{{info.scanData['anamnesis']}}</text>
+  <view class="flex align-center" bindtap="showAll" data-type="anamnesis">
+    <view class="flex-sub dashed-bottom"></view>
+    <view class="margin-lr text-blue">{{allline['anamnesis']?'收起':'展开'}}<text class="text-blue {{allline['anamnesis']?'cuIcon-triangleupfill':'cuIcon-triangledownfill'}}"></text></view>
+    <view class="flex-sub dashed-bottom"></view>
+  </view>
 </view>
 <view class="cu-bar bg-gray">
   <view class="action">
     <text class="cuIcon-title text-blue"></text>治疗经过
   </view>
 </view>
-<view class="cu-form-group">
-  <view class="padding-tb">{{info.scanData['treatment']}}</view>
-</view>
-<view class="cu-bar bg-gray">
-  <view class="action">
-    <text class="cuIcon-title text-blue"></text>出院情况
+
+<view class="bg-white padding">
+  <text class="line2 {{allline['treatment']?'line-all':''}}">{{info.scanData['treatment']}}</text>
+  <view class="flex align-center" bindtap="showAll" data-type="treatment">
+    <view class="flex-sub dashed-bottom"></view>
+    <view class="margin-lr text-blue">{{allline['treatment']?'收起':'展开'}}<text class="text-blue {{allline['treatment']?'cuIcon-triangleupfill':'cuIcon-triangledownfill'}}"></text></view>
+    <view class="flex-sub dashed-bottom"></view>
   </view>
 </view>
-<view class="cu-form-group">
-  <view class="padding-tb">{{info.scanData['dischargeInfo']}}</view>
-</view>
-<view class="cu-bar bg-gray">
-  <view class="action">
-    <text class="cuIcon-title text-blue"></text>出院医嘱(生活方式)
-  </view>
-</view>
-<view class="cu-form-group">
-  <view class="padding-tb">{{info.scanData['life']['content']}}</view>
-</view>
 
-<view class="cu-form-group" wx:for="{{info.scanData['life']['diet']}}">
-  <view class="title">{{item}}</view>
-  <checkbox class='round checked main' checked="true" disabled="true"></checkbox>
-</view>
-
-<view class="cu-list menu solid-top">
-
-
-  <view class="cu-item">
-    <view class="content">
-      每日热量
-    </view>
+<block wx:if="{{info.scanData['dischargeInfo']}}">
+  <view class="cu-bar bg-gray">
     <view class="action">
-      {{info.scanData['life']['cal']}}
+      <text class="cuIcon-title text-blue"></text>出院情况
     </view>
   </view>
-</view>
 
-<view class="cu-bar bg-gray">
-  <view class="action">
-    <text class="cuIcon-title text-blue"></text>出院医嘱(药物治疗)
-  </view>
-</view>
-<view class="padding flex bg-white solid-bottom">
-  <text class="flex-treble">药品名称</text>
-  <text class="flex-twice text-center">产商</text>
-  <text class="flex-twice text-center">规格</text>
-  <text class="flex-twice text-center">方式</text>
-  <text class="flex-twice text-center">时间</text>
-</view>
-
-<view class="padding flex bg-white text-sm" wx:for="{{info.scanData['drugs']}}" wx:key="index">
-  <text class="flex-treble">{{item.name}}</text>
-  <text class="flex-twice text-center">{{item.company}}</text>
-  <text class="flex-twice text-center">{{item.dosage}}</text>
-  <text class="flex-twice text-center">{{item.mode}}</text>
-  <text class="flex-twice text-center">{{item.daily}}</text>
-</view>
-
-
-<view class="cu-bar bg-gray">
-  <view class="action">
-    <text class="cuIcon-title text-blue"></text>出院医嘱(复诊要求)
-  </view>
-</view>
-<view class="cu-form-group solid-bottom">
-  <view class="padding-tb">{{info.scanData['reviewRequire']['content']}}</view>
-</view>
-<view class="cu-list menu">
-  <view class="cu-item">
-    <view class="content">
-      复诊时间
+  <view class="bg-white padding">
+    <text class="line2 {{allline['dischargeInfo']?'line-all':''}}">{{info.scanData['dischargeInfo']}}</text>
+    <view class="flex align-center" bindtap="showAll" data-type="dischargeInfo">
+      <view class="flex-sub dashed-bottom"></view>
+      <view class="margin-lr text-blue">{{allline['dischargeInfo']?'收起':'展开'}}<text class="text-blue {{allline['dischargeInfo']?'cuIcon-triangleupfill':'cuIcon-triangledownfill'}}"></text></view>
+      <view class="flex-sub dashed-bottom"></view>
     </view>
+  </view>
+</block>
+<block wx:if="{{info.scanData['diet']}}">
+  <view class="cu-bar bg-gray">
     <view class="action">
-      {{info.scanData['reviewDiagnosisDate']||'请选择出院时间'}}
+      <text class="cuIcon-title text-blue"></text>饮食事项
     </view>
   </view>
-</view>
 
-<view class="cu-bar bg-gray">
-  <view class="action">
-    <text class="cuIcon-title text-blue"></text>出院医嘱(复查项目)
+  <view class="cu-form-group" wx:for="{{info.scanData['diet']}}">
+    <view class="title">{{item}}</view>
+    <checkbox class='round checked main' checked="true" disabled="true"></checkbox>
+    <input hidden name="plan.lowSalt" value="{{item}}" wx:if="{{item=='低盐'}}"></input>
+    <input hidden name="plan.lowFat" value="{{item}}" wx:if="{{item=='低脂'}}"></input>
   </view>
-</view>
 
-<view class="cu-form-group solid-bottom">
-  <view class="padding-tb">{{info.scanData['reviewProject']['content']}}</view>
-</view>
-<view class="cu-list menu">
-  <view class="cu-item">
-    <view class="content">
-      复查时间
+</block>
+
+
+<block wx:if="{{info.scanData['cal']}}">
+  <view class="cu-list menu solid-top">
+    <input hidden name="quantity" value="{{info.scanData['cal']}}"></input>
+    <view class="cu-item">
+      <view class="content">
+        每日热量
+      </view>
+      <view class="action">
+        {{info.scanData['cal']}}千卡
+      </view>
     </view>
+  </view>
+</block>
+
+<block wx:if="{{info.scanData['drugs']}}">
+  <view class="cu-bar bg-gray">
     <view class="action">
-      {{info.scanData['reviewDate']}}
+      <text class="cuIcon-title text-blue"></text>药物治疗
     </view>
   </view>
-</view>
+  <view class="padding flex bg-white solid-bottom">
+    <text class="flex-treble">药品名称</text>
+    <text class="flex-twice text-center">规格</text>
+    <text class="flex-twice text-center">方式</text>
+    <text class="flex-twice text-center">时间</text>
+  </view>
+
+  <view class="padding flex bg-white text-sm" wx:for="{{info.scanData['drugs']}}" wx:key="index">
+    <text class="flex-treble">{{item.name}}<text wx:if="{{item.company}}">({{item.company}})</text></text>
+    <text class="flex-twice text-center">{{item.dosage}}</text>
+    <text class="flex-twice text-center">{{item.mode}}</text>
+    <text class="flex-twice text-center">{{item.daily}}</text>
+  </view>
+</block>
+
+
+
+<block wx:if="{{info.scanData['advice']}}">
+  <view class="cu-bar bg-gray">
+    <view class="action">
+      <text class="cuIcon-title text-blue"></text>生活方式及出院医嘱
+    </view>
+  </view>
+  <view class="bg-white padding">
+    <text class="line2 {{allline['advice']?'line-all':''}}">
+      <text wx:for="{{info.scanData['advice']}}" wx:key="index">
+        {{index+1}}、{{item}}
+      </text>
+    </text>
+    <view class="flex align-center" bindtap="showAll" data-type="advice">
+      <view class="flex-sub dashed-bottom"></view>
+      <view class="margin-lr text-blue">{{allline['advice']?'收起':'展开'}}<text class="text-blue {{allline['advice']?'cuIcon-triangleupfill':'cuIcon-triangledownfill'}}"></text></view>
+      <view class="flex-sub dashed-bottom"></view>
+    </view>
+  </view>
+</block>
+
+
+
+
+
+<block wx:if="{{info.scanData.review.length>0}}">
+  <view class="cu-bar bg-gray">
+    <view class="action">
+      <text class="cuIcon-title text-blue"></text>复查计划识别区
+    </view>
+  </view>
+  <view class="scan-box padding">
+    <view class="scan-content padding">
+      <view wx:for="{{info.scanData.review}}" wx:key="index">
+        {{index+1}}、{{item}}
+      </view>
+    </view>
+  </view>
+</block>
+<block wx:if="{{info.reviews.length>0}}">
+  <view class=" footer-btns">
+    <view class="cu-bar bg-gray">
+      <view class="action">
+        <text class="cuIcon-title text-blue"></text>复查项目
+      </view>
+    </view>
+    <view class="cu-list menu">
+      <view class="cu-item" wx:for="{{info.reviews}}" wx:key="index">
+        <view class="content">{{item.title}}</view>
+        <view class="action">{{item.time}}</view>
+      </view>
+    </view>
+  </view>
+</block>
+
 
 
 <view class="cu-bar bg-gray">
