--- a/pages/diabetes/patient/detail.wxml
+++ b/pages/diabetes/patient/detail.wxml
@@ -1,8 +1,9 @@
+<topTips errorShow="{{errorShow}}" errorMsg="{{errorMsg}}" errorType="{{errorType}}"></topTips>
 <view class="cu-list menu margin-top">
   <view class="cu-item" wx:if="{{nums['1-0']}}" bindtap="toUrl" data-url="/pages/diabetes/report/list?type=1&status=0&patientId={{patient.id}}">
     <view class="content">
       <view>
-        <view class="padding-tb-xs" style="position: relative;">待核实的报告<view class='cu-tag badge' >{{nums['1-0']}}</view>
+        <view class="padding-tb-xs" style="position: relative;">待核实的报告<view class='cu-tag badge'>{{nums['1-0']}}</view>
         </view>
       </view>
     </view>
@@ -18,7 +19,7 @@
   <view class="cu-item" wx:if="{{nums['2-0']}}" bindtap="toUrl" data-url="/pages/diabetes/report/list?type=2&status=0&patientId={{patient.id}}">
     <view class="content">
       <view>
-        <view class="padding-tb-xs" style="position: relative;">待核实的量表<view class='cu-tag badge' >{{nums['2-0']}}</view>
+        <view class="padding-tb-xs" style="position: relative;">待核实的量表<view class='cu-tag badge'>{{nums['2-0']}}</view>
         </view>
       </view>
     </view>
@@ -32,7 +33,7 @@
     </view>
   </view>
 
-  <view class="cu-item" bindtap="toUrl" data-url="/pages/notice/list?patientId={{patient.id}}">
+  <view class="cu-item" bindtap="toUrl" data-url="/pages/notice/list?patientId={{patient.id}}&type=3">
     <view class="content">
       <text class="">医嘱消息</text>
     </view>
@@ -41,15 +42,57 @@
     </view>
   </view>
 
+  <view class="cu-item" bindtap="toUrl" data-url="/pages/notice/list?patientId={{patient.id}}&type=4">
+    <view class="content">
+      <text class="">通知提醒</text>
+    </view>
+    <view class="action">
+      <text class="text-main text-xxl">{{(nums['4-1']||0)+(nums['4-0']||0)}}</text>
+    </view>
+  </view>
+
+  <view class="cu-item" bindtap="toUrl" data-url="/pages/notice/list?patientId={{patient.id}}&type=5">
+    <view class="content">
+      <text class="">用户消息</text>
+    </view>
+    <view class="action">
+      <text class="text-main text-xxl">{{(nums['5-1']||0)+(nums['5-0']||0)}}</text>
+    </view>
+  </view>
+
 </view>
 
 <view class="padding-xl flex flex-direction footer">
+
+  <button class="cu-btn bg-main round padding-tb-xl margin-xl" bindtap="modalStatus" data-name="notice" wx:if="{{patient.diseaseId==1}}">发送提醒通知</button>
+
+
   <button class="cu-btn bg-main round padding-tb-xl margin-xl" bindtap="toUrl" data-url="/pages/diabetes/patient/statistics?id={{patient.id}}" wx:if="{{patient.diseaseId==1}}">健康数据监测</button>
-  
+
   <button class="cu-btn bg-main round padding-tb-xl margin-xl" bindtap="toUrl" data-url="/pages/follow/list?id={{patient.id}}">患者电话随访记录</button>
   <button class="cu-btn bg-main round padding-tb-xl margin-xl" bindtap="toUrl" data-url="/pages/diabetes/patient/info?id={{patient.id}}">查看患者信息</button>
 </view>
 
+<view class="cu-modal show" wx:if="{{modalnotice}}">
+  <form bindsubmit="notice">
+    <input name="patientId" value="{{patient.id}}" hidden></input>
+    <view class="cu-dialog bg-white padding text-left">
+      <view class="cu-bar bg-white justify-end">
+        <view class="content">发送通知</view>
+        <view class="action" bindtap="modalStatus" data-name="notice">
+          <text class="cuIcon-close text-red"></text>
+        </view>
+      </view>
+      <view class="cu-bar">
+        <textarea name="advice" class="solid padding margin-top" style="min-height: 200rpx;width: 100%;" maxlength="-1" placeholder="通知内容"></textarea>
+      </view>
+      <view class="padding flex justify-center align-center bg-white">
+        <button style="width: 40%;" class="cu-btn bg-main lg" form-type="submit">发送</button>
+      </view>
+    </view>
+  </form>
+
+</view>
 
 
 <view class="cu-modal show" wx:if="{{show}}">
@@ -57,12 +100,12 @@
     <input name="patientId" value="{{patient.id}}" hidden></input>
     <view class="cu-dialog bg-white padding text-left">
       <view class="cu-bar bg-white justify-end">
-					<view class="content">患者随访</view>
-					<view class="action" bindtap="showModal">
-						<text class="cuIcon-close text-red"></text>
-					</view>
-				</view>
-      <view class="cu-bar margin-top">        
+        <view class="content">患者随访</view>
+        <view class="action" bindtap="showModal">
+          <text class="cuIcon-close text-red"></text>
+        </view>
+      </view>
+      <view class="cu-bar margin-top">
         <view class="action flex-wrap">
           <text class="margin-right margin-top-xs">患者标签</text>
           <view class="cu-tag bg-main margin-top-xs">{{typeArr[patient.assess.type||2]}}</view>
