--- a/pages/diabetes/patient/detail.wxml
+++ b/pages/diabetes/patient/detail.wxml
@@ -64,13 +64,13 @@
 
 <view class="padding-xl flex flex-direction footer">
 
-  <button class="cu-btn bg-main round padding-tb-xl margin-xl" bindtap="modalStatus" data-name="notice" wx:if="{{patient.diseaseId==1}}">发送提醒通知</button>
+  <button class="cu-btn bg-main round padding-tb-xl margin-sm" bindtap="modalStatus" data-name="notice" wx:if="{{patient.diseaseId==1}}">发送提醒通知</button>
 
 
-  <button class="cu-btn bg-main round padding-tb-xl margin-xl" bindtap="toUrl" data-url="/pages/diabetes/patient/statistics?id={{patient.id}}" wx:if="{{patient.diseaseId==1}}">健康数据监测</button>
+  <button class="cu-btn bg-main round padding-tb-xl  margin-sm" bindtap="toUrl" data-url="/pages/diabetes/patient/statistics?id={{patient.id}}" wx:if="{{patient.diseaseId==1}}">健康数据监测</button>
 
-  <button class="cu-btn bg-main round padding-tb-xl margin-xl" bindtap="toUrl" data-url="/pages/follow/list?id={{patient.id}}">患者电话随访记录</button>
-  <button class="cu-btn bg-main round padding-tb-xl margin-xl" bindtap="toUrl" data-url="/pages/diabetes/patient/info?id={{patient.id}}">查看患者信息</button>
+  <button class="cu-btn bg-main round padding-tb-xl  margin-sm" bindtap="toUrl" data-url="/pages/follow/list?id={{patient.id}}">患者电话随访记录</button>
+  <button class="cu-btn bg-main round padding-tb-xl  margin-sm" bindtap="toUrl" data-url="/pages/diabetes/patient/info?id={{patient.id}}">查看患者信息</button>
 </view>
 
 <view class="cu-modal show" wx:if="{{modalnotice}}">
